I finally figured it out! bugs are squashed!

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -170,7 +170,7 @@ aside {
 /*Profielfoto*/
 .profilePic {
     height: auto;
-    width: 35%;
+    width: 20%;
     margin-left: 5%;
     padding: 3% 3% 3% 3%;
     transition: all ease-in 0.5s;
@@ -192,13 +192,10 @@ aside {
 .home-section {
     display: flex;
     justify-content: space-evenly;
-    flex-direction: column;
 }
 
 .home-section button {
-    height: 2rem;
-    width: 35%;
-    margin: 5% 0 0 8%;
+    height: 3rem;
     background: white;
     border: black 1px solid;
 }
